@@ -31,6 +31,7 @@ coverage = 3.4
 distribute = 0.6.14
 django-compositepk = 1.0
 django-compressor = 0.5.3
+django-extensions = 0.6
 django-nose = 0.1.2
 django-staticfiles = 0.3.2
 django-treebeard = 1.61
